fix letter spacing phone number and email

--- a/css/style.css
+++ b/css/style.css
@@ -694,7 +694,9 @@ p.core-values-header{
   font-size: 2.5rem;
   color: var(--primary);
 }
-
+.contact-info-grid-item p {
+  letter-spacing: normal;
+}
 .contact-info-btn{
   border: 1px solid var(--secondary);
   border-radius: 0.5rem;
